fix code block overflow

--- a/preview/assets/main.css
+++ b/preview/assets/main.css
@@ -69,6 +69,7 @@ body {
   overflow: scroll;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .code-block[data-collapsed="true"] {
